Revert "Sync block body (#8242)"
This reverts commit 2fb25ce667ff01fae016f1de416234c98c59941c.

Signed-off-by: stefan.pingel@consensys.net <stefan.pingel@consensys.net>